bnlearn (3.8)

  * reorder CPT dimensions as needed in custom.fit() (thanks Zheng Zhu).
  * fixed two uninitialized-memory bugs found by valgrind, one in
     predict() and one random.graph().
  * fixed wrong check for cluster objects (thanks Vladimir Manewitsch).
  * fixed the description of the alternative hypothesis for the
     Jonckheere-Terpstra test.
  * allow undirected cycles in whitelists for structure learning algorithms
     and let the algorithm learn arc directions (thanks Vladimir Manewitsch).
  * include sanitized whitelists (as opposed to those provided by the user)
     in bn.fit objects.
  * removed predict() methods for single-node objects, use the method for
     bn.fit objects instead.
  * various fixes in the monolithic C test functions.
  * fixed indexing bug in compare() (thanks Vladimir Manewitsch).
  * fixed false positives in cycle detection when adding edges to a graph
     (thanks Vladimir Manewitsch).
  * fixed prior handling in predict() for naive Bayes and TAN classifiers
     (thanks Vinay Bhat).
  * added configs() to construct configurations of discrete variables.
  * added sigma() to extract standard errors from bn.fit objects.

bnlearn (3.7.1)

  * small changes to make CRAN checks happy.

bnlearn (3.7)

  * fixed the default setting for the number of particles in cpquery()
     (thanks Nishanth Upadhyaya).
  * reimplemented common test patterns in monolithic C functions to speed
     up constraint-based algorithms.
  * added support for conditional linear Gaussian (CLG) networks.
  * fixed several recursion bugs in choose.direction().
  * make read.{bif,dsc,net}() consistent with the `$<-` method for bn.fit
     objects (thanks Felix Rios).
  * support empty networks in read.{bif,dsc,net}().
  * fixed bug in hc(), triggered when using both random restarts and the
     maxp argument (thanks Irene Kaplow).
  * correctly initialize the Castelo & Siebes prior (thanks Irene Kaplow).