@@ -2,8 +2,8 @@ Package: bnlearn
 Type: Package
 Title: Bayesian Network Structure Learning, Parameter Learning and
         Inference
-Version: 3.8
-Date: 2015-04-20
+Version: 3.8.1
+Date: 2015-05-17
 Depends: R (>= 2.14.0), methods
 Suggests: parallel, graph, Rgraphviz, lattice, gRain
 Author: Marco Scutari
@@ -26,7 +26,7 @@ Description: Bayesian network structure learning, parameter learning and
 URL: http://www.bnlearn.com/
 License: GPL (>= 2)
 LazyData: yes
-Packaged: 2015-05-02 18:17:32 UTC; scutari
 NeedsCompilation: yes
+Packaged: 2015-05-17 09:27:14 UTC; fizban
 Repository: CRAN
-Date/Publication: 2015-05-03 07:07:32
+Date/Publication: 2015-05-17 12:45:42
